# Camera-traps-wild-life

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
camera_traps/: main.py
camera_traps/motion_detection/: capture_motion.py  geometry_utils.py  tracking_objects.py
camera_traps/notebooks/classification/: augmentation.py  callbacks.py  test.ipynb  training.ipynb
src/: main.py
src/model/: model.py
src/models/: model.py
src/motion_detection/: capture_motion.py  gui.py
src/notebooks/classification/: 1. training-transfer-20230608-lite.ipynb  2. test.ipynb  data_augmentation.py  training.ipynb
