[tool.poetry]
name = "ml-piane-di-sopra"
version = "0.1.0"
description = ""
authors = ["PFoini<pietro.foini1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
shapely = "1.8.2"
pandas = "2.0.2"
numpy = "1.24.3"
scikit-learn = "1.2.2"
matplotlib = "3.4.3"
ipywidgets = "8.0.6"
opencv-python = "4.7.0.72"
IPython = "7.29.0"
tensorflow = "2.8.3"
tensorflow-io-gcs-filesystem = "0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
